Apply translation memory

--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-infinispan-client-infinispan-client-runtime-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-infinispan-client-infinispan-client-runtime-config.adoc.po
@@ -85,14 +85,14 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-infinispan-client-infinispan-client-runtime-config.adoc:44
 #, no-wrap
 msgid "boolean"
-msgstr ""
+msgstr "boolean"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-infinispan-client-infinispan-client-runtime-config.adoc:29
 #: upstream/_generated-config/main/config/quarkus-infinispan-client-infinispan-client-runtime-config.adoc:47
 #, no-wrap
 msgid "`true`"
-msgstr ""
+msgstr "`true`"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-infinispan-client-infinispan-client-runtime-config.adoc:34
