--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-infinispan-client.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-infinispan-client.adoc.po
@@ -109,14 +109,14 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-infinispan-client.adoc:53
 #, no-wrap
 msgid "boolean"
-msgstr ""
+msgstr "boolean"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-infinispan-client.adoc:38
 #: upstream/_generated-config/main/config/quarkus-infinispan-client.adoc:56
 #, no-wrap
 msgid "`true`"
-msgstr ""
+msgstr "`true`"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-infinispan-client.adoc:43
