--- a/l10n/po/ja_JP/_versions/main/guides/vertx-reference.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/vertx-reference.adoc.po
@@ -105,7 +105,7 @@ msgstr ""
 #: upstream/_versions/main/guides/vertx-reference.adoc:462
 #, no-wrap
 msgid "Mutiny"
-msgstr ""
+msgstr "Mutiny"
 
 #. type: delimited block =
 #: upstream/_versions/main/guides/vertx-reference.adoc:51
@@ -166,7 +166,7 @@ msgstr ""
 #: upstream/_versions/main/guides/vertx-reference.adoc:82
 #, no-wrap
 msgid "Documentation"
-msgstr ""
+msgstr "ドキュメント"
 
 #. type: Table
 #: upstream/_versions/main/guides/vertx-reference.adoc:83
@@ -531,7 +531,7 @@ msgstr ""
 #: upstream/_versions/main/guides/vertx-reference.adoc:222
 #, no-wrap
 msgid "./mvnw package -Pnative\n"
-msgstr ""
+msgstr "./mvnw package -Pnative\n"
 
 #. type: Title ==
 #: upstream/_versions/main/guides/vertx-reference.adoc:225
@@ -719,7 +719,7 @@ msgstr ""
 #: upstream/_versions/main/guides/vertx-reference.adoc:713
 #, no-wrap
 msgid "import javax.enterprise.context.ApplicationScoped;\n"
-msgstr ""
+msgstr "import javax.enterprise.context.ApplicationScoped;\n"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/vertx-reference.adoc:329
@@ -812,7 +812,7 @@ msgstr ""
 #: upstream/_versions/main/guides/vertx-reference.adoc:376
 #, no-wrap
 msgid "Using the event bus"
-msgstr ""
+msgstr "イベントバスの使用"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/vertx-reference.adoc:380
@@ -826,13 +826,15 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/main/guides/vertx-reference.adoc:385
+#, fuzzy
 msgid "point-to-point - send the message, one consumer receives it. If several consumers listen to the address, a round-robin is applied;"
-msgstr ""
+msgstr "point-to-point - メッセージを送信し、1 つのコンシューマがそれを受信します。複数のコンシューマがアドレスをリスンしている場合、ラウンドロビンが適用されます。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/vertx-reference.adoc:386
+#, fuzzy
 msgid "publish/subscribe - publish a message; all the consumers listening to the address are receiving the message;"
-msgstr ""
+msgstr "publish/subscribe - メッセージをパブリッシュし、アドレスをリスンしているすべてのコンシューマがメッセージを受信します。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/vertx-reference.adoc:387
@@ -848,7 +850,7 @@ msgstr ""
 #: upstream/_versions/main/guides/vertx-reference.adoc:390
 #, no-wrap
 msgid "Consuming events"
-msgstr ""
+msgstr "イベントのコンシューム"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/vertx-reference.adoc:394
@@ -891,19 +893,20 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/main/guides/vertx-reference.adoc:414
+#, fuzzy
 msgid "The method parameter is the message body. If the method returns _something_, it's the message response."
-msgstr ""
+msgstr "メソッドのパラメーターはメッセージ本体です。メソッドが _何か_ を返す場合は、それがメッセージのレスポンスになります。"
 
 #. type: Title ===
 #: upstream/_versions/main/guides/vertx-reference.adoc:415
 #, no-wrap
 msgid "Configuring the address"
-msgstr ""
+msgstr "アドレスの設定"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/vertx-reference.adoc:418
 msgid "The `@ConsumeEvent` annotation can be configured to set the address:"
-msgstr ""
+msgstr "`@ConsumeEvent` アノテーションでアドレスを設定することができます。"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/vertx-reference.adoc:425
@@ -918,7 +921,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/vertx-reference.adoc:427
 msgid "Receive the messages sent to the `greeting` address"
-msgstr ""
+msgstr "`greeting` アドレスに送信されたメッセージを受信する"
 
 #. type: Title ===
 #: upstream/_versions/main/guides/vertx-reference.adoc:428
@@ -973,7 +976,7 @@ msgstr ""
 #: upstream/_versions/main/guides/vertx-reference.adoc:468
 #, no-wrap
 msgid "Blocking processing"
-msgstr ""
+msgstr "ブロッキング処理"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/vertx-reference.adoc:472
@@ -1009,7 +1012,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/vertx-reference.adoc:493
 msgid "When using `@Blocking`, it ignores the value of the `blocking` attribute of `@ConsumeEvent`."
-msgstr ""
+msgstr "`@Blocking` を使用する場合、 `@ConsumeEvent` の `blocking` 属性の値は無視されます。"
 
 #. type: Title ===
 #: upstream/_versions/main/guides/vertx-reference.adoc:494
@@ -1035,7 +1038,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/vertx-reference.adoc:508
 msgid "You can also return a `Uni<T>` or a `CompletionStage<T>` to handle asynchronous reply:"
-msgstr ""
+msgstr "また、 `Uni<T>` や `CompletionStage<T>` を返すことで、非同期応答を扱うこともできます。。"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/vertx-reference.adoc:515
@@ -1050,7 +1053,7 @@ msgstr ""
 #. type: delimited block =
 #: upstream/_versions/main/guides/vertx-reference.adoc:520
 msgid "You can inject an `executor` if you use the Context Propagation extension:"
-msgstr ""
+msgstr "Context Propagation エクステンションを使えば、 `executor` を注入することができます。"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/vertx-reference.adoc:523
@@ -1062,7 +1065,7 @@ msgstr ""
 #: upstream/_versions/main/guides/vertx-reference.adoc:526
 #, no-wrap
 msgid "Implementing fire and forget interactions"
-msgstr ""
+msgstr "fire and forget インタラクションの実装"
 
 #. type: delimited block =
 #: upstream/_versions/main/guides/vertx-reference.adoc:531
@@ -1126,7 +1129,7 @@ msgstr ""
 #: upstream/_versions/main/guides/vertx-reference.adoc:560
 #, no-wrap
 msgid "Sending messages"
-msgstr ""
+msgstr "メッセージの送信"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/vertx-reference.adoc:563
@@ -1189,27 +1192,27 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/vertx-reference.adoc:595
 msgid "Inject the Event bus"
-msgstr ""
+msgstr "イベントバスのインジェクト"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/vertx-reference.adoc:596
 msgid "Send a message to the address `greeting`. Message payload is `name`"
-msgstr ""
+msgstr "アドレス `greeting` にメッセージを送信。メッセージのペイロードは `name`"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/vertx-reference.adoc:598
 msgid "The `EventBus` object provides methods to:"
-msgstr ""
+msgstr "`EventBus` オブジェクトは、以下のメソッドを提供します。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/vertx-reference.adoc:600
 msgid "`send` a message to a specific address - one single consumer receives the message."
-msgstr ""
+msgstr "`send` 特定のアドレスへのメッセージ - 一人のコンシューマーがメッセージを受信する。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/vertx-reference.adoc:601
 msgid "`publish` a message to a specific address - all consumers receive the messages."
-msgstr ""
+msgstr "`publish` 特定のアドレスにメッセージを送る - すべてのコンシューマーがメッセージを受け取る。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/vertx-reference.adoc:602
@@ -1233,12 +1236,12 @@ msgstr ""
 #: upstream/_versions/main/guides/vertx-reference.adoc:614
 #, no-wrap
 msgid "Using codecs"
-msgstr ""
+msgstr "コーデックを使う"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/vertx-reference.adoc:619
 msgid "The https://vertx.io/docs/vertx-core/java/#event_bus[Vert.x Event Bus] uses codecs to _serialize_ and _deserialize_ objects.  Quarkus provides a default codec for local delivery.  So you can exchange objects as follows:"
-msgstr ""
+msgstr "link:https://vertx.io/docs/vertx-core/java/#event_bus[Vert.xイベントバス] では、コーデックを使用してオブジェクトの _シリアライズ_ と _デシリアライズ_ を行います。Quarkusでは、ローカル配信用のデフォルトのコーデックを提供しています。そのため、以下のようにオブジェクトを交換することができます。"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/vertx-reference.adoc:629
@@ -1295,12 +1298,12 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/vertx-reference.adoc:655
 msgid "Set the name of the codec to use to send the message"
-msgstr ""
+msgstr "メッセージの送信に使用するコーデックの名前を設定します。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/vertx-reference.adoc:656
 msgid "Set the codec to use to receive the message"
-msgstr ""
+msgstr "メッセージの受信に使用するコーデックを設定します。"
 
 #. type: Title ===
 #: upstream/_versions/main/guides/vertx-reference.adoc:657
@@ -1351,12 +1354,12 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/vertx-reference.adoc:697
 msgid "send the `name` to the `greeting` address and request a response"
-msgstr ""
+msgstr "`greeting` アドレスに  `name`  を送信し、レスポンスを要求します。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/vertx-reference.adoc:698
 msgid "when we get the response, extract the body and send it to the user"
-msgstr ""
+msgstr "レスポンスを取得したら、ボディを抽出してユーザーに送信します。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/vertx-reference.adoc:702
@@ -1397,7 +1400,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/vertx-reference.adoc:735
 msgid "To better understand, let's detail how the HTTP request/response has been handled:"
-msgstr ""
+msgstr "より理解しやすくするために、HTTP リクエスト/レスポンスがどのように処理されたかを詳しく見てみましょう。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/vertx-reference.adoc:737
@@ -1407,22 +1410,22 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/vertx-reference.adoc:738
 msgid "a message containing the _name_ is sent to the event bus"
-msgstr ""
+msgstr "_name_ を含むメッセージがイベントバスに送信されます。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/vertx-reference.adoc:739
 msgid "Another bean receives this message and computes the response"
-msgstr ""
+msgstr "別の Bean がこのメッセージを受信して、レスポンスを計算します."
 
 #. type: Plain text
 #: upstream/_versions/main/guides/vertx-reference.adoc:740
 msgid "This response is sent back using the reply mechanism"
-msgstr ""
+msgstr "このレスポンスは、応答機構を使用して返信されます。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/vertx-reference.adoc:741
 msgid "Once the reply is received by the sender, the content is written to the HTTP response"
-msgstr ""
+msgstr "送信者が応答を受信すると、HTTP レスポンスに内容が書き込まれます。"
 
 #. type: Title ===
 #: upstream/_versions/main/guides/vertx-reference.adoc:743
@@ -1570,7 +1573,7 @@ msgstr ""
 #: upstream/_versions/main/guides/vertx-reference.adoc:825
 #, no-wrap
 msgid "Native Transport"
-msgstr ""
+msgstr "ネイティブトランスポート"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/vertx-reference.adoc:828
@@ -1632,7 +1635,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/vertx-reference.adoc:867
 msgid "If all is well quarkus will log:"
-msgstr ""
+msgstr "すべてがうまくいけば、クァーカス以下のログ出力を行います。"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/vertx-reference.adoc:870
@@ -1644,18 +1647,18 @@ msgstr ""
 #: upstream/_versions/main/guides/vertx-reference.adoc:872
 #, no-wrap
 msgid "Native Linux Transport"
-msgstr ""
+msgstr "ネイティブLinuxトランスポート"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/vertx-reference.adoc:875
 msgid "On Linux you can enable the following socket options:"
-msgstr ""
+msgstr "Linuxでは、以下のソケットオプションを有効にすることができます。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/vertx-reference.adoc:877
 #: upstream/_versions/main/guides/vertx-reference.adoc:898
 msgid "SO_REUSEPORT"
-msgstr ""
+msgstr "SOREUSEPORT"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/vertx-reference.adoc:879
@@ -1701,12 +1704,12 @@ msgstr ""
 #: upstream/_versions/main/guides/vertx-reference.adoc:893
 #, no-wrap
 msgid "Native MacOS Transport"
-msgstr ""
+msgstr "ネイティブMacOSトランスポート"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/vertx-reference.adoc:896
 msgid "On MacOS Sierra and above you can enable the following socket options:"
-msgstr ""
+msgstr "MacOS Sierra以上では、以下のソケットオプションを有効にすることができます。"
 
 #. type: Title ==
 #: upstream/_versions/main/guides/vertx-reference.adoc:903
@@ -1716,13 +1719,14 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/main/guides/vertx-reference.adoc:909
+#, fuzzy
 msgid "Listening on a Unix domain socket allows us to dispense with the overhead of TCP if the connection to the quarkus service is established from the same host. This can happen if access to the service goes through a proxy which is often the case if you're setting up a service mesh with a proxy like Envoy."
-msgstr ""
+msgstr "unix ドメインソケットをリスンすることで、同じホストから quarkus サービスへの接続が確立されている場合、TCP のオーバーヘッドを省くことができます。これはサービスへのアクセスがプロキシーを経由している場合に起こる可能性があり、Envoyのようなプロキシーでサービスメッシュを設定している場合によく起こります。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/vertx-reference.adoc:911
 msgid "This will only work on platforms that support <<native-transport>>."
-msgstr ""
+msgstr "これは、 link:#native-transport[[native-transport]] をサポートするプラットフォームでのみ動作します。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/vertx-reference.adoc:914
