--- a/l10n/po/ja_JP/_versions/main/guides/vertx.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/vertx.adoc.po
@@ -76,7 +76,7 @@ msgstr ""
 #: upstream/_versions/main/guides/vertx.adoc:26
 #, no-wrap
 msgid "Architecture"
-msgstr ""
+msgstr "アーキテクチャ"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/vertx.adoc:29
@@ -527,7 +527,7 @@ msgstr ""
 #: upstream/_versions/main/guides/vertx.adoc:252
 #, no-wrap
 msgid "Using the event bus"
-msgstr ""
+msgstr "イベントバスの使用"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/vertx.adoc:262
