Update .po files

--- a/l10n/po/ja_JP/_versions/main/guides/building-native-image.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/building-native-image.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-06-09 02:32+0000\n"
+"POT-Creation-Date: 2021-07-10 02:18+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -574,7 +574,9 @@ msgstr ""
 
 #. type: delimited block =
 #: upstream/_versions/main/guides/building-native-image.adoc:330
-msgid "By default, Quarkus waits for 60 seconds for the native image to start before automatically failing the native tests. This duration can be changed using the `quarkus.test.native-image-wait-time` system property. For example, to increase the duration to 300 seconds, use: `./mvnw verify -Pnative -Dquarkus.test.native-image-wait-time=300`."
+#, fuzzy
+#| msgid "By default, Quarkus waits for 60 seconds for the native image to start before automatically failing the native tests. This duration can be changed using the `quarkus.test.native-image-wait-time` system property. For example, to increase the duration to 300 seconds, use: `./mvnw verify -Pnative -Dquarkus.test.native-image-wait-time=300`."
+msgid "By default, Quarkus waits for 60 seconds for the native image to start before automatically failing the native tests. This duration can be changed using the `quarkus.test.wait-time` system property. For example, to increase the duration to 300 seconds, use: `./mvnw verify -Pnative -Dquarkus.test.wait-time=300`."
 msgstr "デフォルトでは、Quarkusはネイティブテストを開始し、自動的に失敗するまでに60秒待機します。この時間は、 `quarkus.test.native-image-wait-time`  システムプロパティーを使用して変更できます。たとえば、待機時間を300秒に増やすには、 `./mvnw verify -Pnative -Dquarkus.test.native-image-wait-time=300` となります。"
 
 #. type: delimited block =
