--- a/l10n/po/ja_JP/_versions/main/guides/grpc-service-consumption.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/grpc-service-consumption.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-06-11 02:26+0000\n"
+"POT-Creation-Date: 2021-07-10 02:18+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -27,7 +27,9 @@ msgstr "gRPC サービスを消費する"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/grpc-service-consumption.adoc:11
-msgid "gRPC services can be injected in your application code."
+#, fuzzy
+#| msgid "gRPC services can be injected in your application code."
+msgid "gRPC clients can be injected in your application code."
 msgstr "gRPC サービスは、アプリケーションのコードに注入することができます。"
 
 #. type: Plain text
