--- a/l10n/po/ja_JP/_versions/main/guides/security-jwt.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/security-jwt.adoc.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2021-07-07 02:19+0000\n"
+"POT-Creation-Date: 2021-07-10 02:19+0000\n"
 "PO-Revision-Date: 2021-05-12 14:05+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -1791,7 +1791,7 @@ msgstr "トークン復号化"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/security-jwt.adoc:759
-msgid "If your application needs to accept the tokens with the encrypted claims or with the encrypted inner signed claims then all you have to do is to set `smallrye.jwt.decrypt.key-location` pointing to the decryption key."
+msgid "If your application needs to accept the tokens with the encrypted claims or with the encrypted inner signed claims then all you have to do is to set `smallrye.jwt.decrypt.key.location` pointing to the decryption key."
 msgstr ""
 
 #. type: Plain text
@@ -2297,7 +2297,7 @@ msgstr ""
 #: upstream/_versions/main/guides/security-jwt.adoc:1047
 #, no-wrap
 msgid ""
-"// Encrypt the claims using the public key loaded from the location set with a 'smallrye.jwt.encrypt.key-location' property.\n"
+"// Encrypt the claims using the public key loaded from the location set with a 'smallrye.jwt.encrypt.key.location' property.\n"
 "String jwt1 = Jwt.claims(\"/tokenClaims.json\").jwe().encrypt();\n"
 msgstr ""
 
