--- a/l10n/po/ja_JP/_versions/main/guides/kafka-reactive-getting-started.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/kafka-reactive-getting-started.adoc.po
@@ -28,18 +28,18 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/kafka-reactive-getting-started.adoc:11
 msgid "This guide demonstrates how your Quarkus application can utilize SmallRye Reactive Messaging to interact with Apache Kafka."
-msgstr ""
+msgstr "このガイドでは、Quarkus アプリケーションが SmallRye Reactive Messaging を利用して Apache Kafka とやりとりする仕組みを説明します。"
 
 #. type: Title ==
 #: upstream/_versions/main/guides/kafka-reactive-getting-started.adoc:12
 #, no-wrap
 msgid "Prerequisites"
-msgstr ""
+msgstr "前提条件"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/kafka-reactive-getting-started.adoc:15
 msgid "To complete this guide, you need:"
-msgstr ""
+msgstr "このガイドを完成させるには、以下が必要です:"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/kafka-reactive-getting-started.adoc:17
@@ -49,7 +49,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/kafka-reactive-getting-started.adoc:18
 msgid "an IDE"
-msgstr ""
+msgstr "IDE"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/kafka-reactive-getting-started.adoc:19
@@ -59,18 +59,18 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/kafka-reactive-getting-started.adoc:20
 msgid "Apache Maven {maven-version}"
-msgstr ""
+msgstr "Apache Maven {maven-version}"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/kafka-reactive-getting-started.adoc:21
 msgid "GraalVM installed if you want to run in native mode."
-msgstr ""
+msgstr "ネイティブモードで動作させたい場合は、GraalVMがインストールされていること"
 
 #. type: Title ==
 #: upstream/_versions/main/guides/kafka-reactive-getting-started.adoc:22
 #, no-wrap
 msgid "Architecture"
-msgstr ""
+msgstr "アーキテクチャ"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/kafka-reactive-getting-started.adoc:27
@@ -120,7 +120,7 @@ msgstr ""
 #: upstream/_versions/main/guides/kafka-reactive-getting-started.adoc:41
 #, no-wrap
 msgid "Solution"
-msgstr ""
+msgstr "ソリューション"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/kafka-reactive-getting-started.adoc:45
@@ -130,12 +130,12 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/kafka-reactive-getting-started.adoc:47
 msgid "Clone the Git repository: `git clone {quickstarts-clone-url}`, or download an {quickstarts-archive-url}[archive]."
-msgstr ""
+msgstr "Gitレポジトリをクローンするか `git clone {quickstarts-clone-url}` 、 {quickstarts-archive-url}[アーカイブ] をダウンロードします。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/kafka-reactive-getting-started.adoc:49
 msgid "The solution is located in the `kafka-quickstart` {quickstarts-tree-url}/kafka-quickstart[directory]."
-msgstr ""
+msgstr "このソリューションは `kafka-quickstart` {quickstarts-tree-url}/kafka-quickstart[ディレクトリ] にあります。"
 
 #. type: Title ==
 #: upstream/_versions/main/guides/kafka-reactive-getting-started.adoc:50
@@ -179,7 +179,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/kafka-reactive-getting-started.adoc:76
 msgid "This will add the following to your `pom.xml`:"
-msgstr ""
+msgstr "これにより、 `pom.xml` に以下が追加されます:"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/kafka-reactive-getting-started.adoc:87
@@ -215,7 +215,7 @@ msgstr ""
 #: upstream/_versions/main/guides/kafka-reactive-getting-started.adoc:102
 #, no-wrap
 msgid "Dev Services"
-msgstr ""
+msgstr "Dev Services"
 
 #. type: delimited block =
 #: upstream/_versions/main/guides/kafka-reactive-getting-started.adoc:107
@@ -435,7 +435,7 @@ msgstr ""
 #: upstream/_versions/main/guides/kafka-reactive-getting-started.adoc:217
 #, no-wrap
 msgid "import javax.enterprise.context.ApplicationScoped;\n"
-msgstr ""
+msgstr "import javax.enterprise.context.ApplicationScoped;\n"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/kafka-reactive-getting-started.adoc:221
@@ -468,7 +468,7 @@ msgstr ""
 #: upstream/_versions/main/guides/kafka-reactive-getting-started.adoc:232
 #, no-wrap
 msgid "    private Random random = new Random();\n"
-msgstr ""
+msgstr "    private Random random = new Random();\n"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/kafka-reactive-getting-started.adoc:242
@@ -543,12 +543,12 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/kafka-reactive-getting-started.adoc:270
 msgid "`mp.messaging.[outgoing|incoming].{channel-name}.property=value`"
-msgstr ""
+msgstr "`mp.messaging.[outgoing|incoming].{channel-name}.property=value`"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/kafka-reactive-getting-started.adoc:272
 msgid "The `channel-name` segment must match the value set in the `@Incoming` and `@Outgoing` annotation:"
-msgstr ""
+msgstr "`channel-name` セグメントは、 `@Incoming` および `@Outgoing` アノテーションで設定された値と一致する必要があります。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/kafka-reactive-getting-started.adoc:274
@@ -622,12 +622,12 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/kafka-reactive-getting-started.adoc:310
 msgid "Indicates that the content is sent using `Server Sent Events`"
-msgstr ""
+msgstr "`Server Sent Events` を使用してコンテンツが送信されたことを示します。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/kafka-reactive-getting-started.adoc:311
 msgid "Returns the stream (_Reactive Stream_)"
-msgstr ""
+msgstr "ストリーム (_Reactive Stream_) を返します。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/kafka-reactive-getting-started.adoc:314
@@ -667,7 +667,7 @@ msgstr ""
 #: upstream/_versions/main/guides/kafka-reactive-getting-started.adoc:344
 #, no-wrap
 msgid "import io.quarkus.kafka.client.serialization.ObjectMapperDeserializer;\n"
-msgstr ""
+msgstr "import io.quarkus.kafka.client.serialization.ObjectMapperDeserializer;\n"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/kafka-reactive-getting-started.adoc:351
@@ -711,7 +711,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/kafka-reactive-getting-started.adoc:371
 msgid "Final touch, the HTML page reading the converted prices using SSE."
-msgstr ""
+msgstr "最後に、SSE を使って変換された価格を読み込む HTML ページです。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/kafka-reactive-getting-started.adoc:373
@@ -774,7 +774,7 @@ msgstr ""
 #: upstream/_versions/main/guides/kafka-reactive-getting-started.adoc:418
 #, no-wrap
 msgid "Get it running"
-msgstr ""
+msgstr "稼動させる"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/kafka-reactive-getting-started.adoc:421
@@ -823,13 +823,13 @@ msgstr ""
 #: upstream/_versions/main/guides/kafka-reactive-getting-started.adoc:447
 #, no-wrap
 msgid "version: '2'\n"
-msgstr ""
+msgstr "version: '2'\n"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/kafka-reactive-getting-started.adoc:449
 #, no-wrap
 msgid "services:\n"
-msgstr ""
+msgstr "services:\n"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/kafka-reactive-getting-started.adoc:462
@@ -932,13 +932,13 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/kafka-reactive-getting-started.adoc:518
 msgid "This is a development cluster, do not use in production."
-msgstr ""
+msgstr "これは開発クラスターであり、本番では使用しないでください。"
 
 #. type: Title ==
 #: upstream/_versions/main/guides/kafka-reactive-getting-started.adoc:519
 #, no-wrap
 msgid "Going further"
-msgstr ""
+msgstr "さらに詳しく"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/kafka-reactive-getting-started.adoc:523
