Add machine translation

--- a/l10n/po/ja_JP/_guides/cli-tooling.adoc.po
+++ b/l10n/po/ja_JP/_guides/cli-tooling.adoc.po
@@ -259,9 +259,9 @@ msgstr ""
 
 #. type: Title ==
 #: upstream/_guides/cli-tooling.adoc:150
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Specifying the Quarkus version"
-msgstr ""
+msgstr "Quarkusのバージョンの指定"
 
 #. type: delimited block -
 #: upstream/_guides/cli-tooling.adoc:153
