--- a/l10n/po/ja_JP/_guides/gradle-tooling.adoc.po
+++ b/l10n/po/ja_JP/_guides/gradle-tooling.adoc.po
@@ -350,8 +350,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/gradle-tooling.adoc:175
+#, fuzzy
 msgid "If you don't want to install the Quarkus CLI you can run development mode directly from gradle:"
-msgstr ""
+msgstr "Quarkus CLIをインストールしたくない場合は、gradleから直接開発モードを実行できます。"
 
 #. type: delimited block -
 #: upstream/_guides/gradle-tooling.adoc:179
@@ -361,8 +362,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/gradle-tooling.adoc:183
+#, fuzzy
 msgid "Note that if you run it this way the continuous testing experience will not be as nice, as gradle runs as a daemon Quarkus can't draw the 'pretty' test output so falls back to just logging the output."
-msgstr ""
+msgstr "gradleはデーモンとして実行されるため、Quarkusは「きれいな」テスト出力を描くことができず、出力のログを取るだけになってしまうからです。"
 
 #. type: Plain text
 #: upstream/_guides/gradle-tooling.adoc:187
