--- a/l10n/po/ja_JP/_guides/mongodb-panache.adoc.po
+++ b/l10n/po/ja_JP/_guides/mongodb-panache.adoc.po
@@ -1468,9 +1468,9 @@ msgstr ""
 
 #. type: Title ==
 #: upstream/_guides/mongodb-panache.adoc:716
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "The PojoCodecProvider: easy object to BSON document conversion."
-msgstr ""
+msgstr "PojoCodecProvider: オブジェクトからBSONドキュメントへの変換を簡単に行うことができます。"
 
 #. type: Plain text
 #: upstream/_guides/mongodb-panache.adoc:720
@@ -1480,13 +1480,15 @@ msgstr "MongoDB with Panache は link:{mongodb-doc-root-url}/bson/pojos/[PojoCod
 
 #. type: Plain text
 #: upstream/_guides/mongodb-panache.adoc:725
+#, fuzzy
 msgid "In case you encounter the `org.bson.codecs.configuration.CodecConfigurationException` exception, it means the codec is not able to automatically convert your object.  This codec obeys the Java Bean standard, so it will successfully convert a POJO using public fields or getters/setters.  You can use `@BsonIgnore` to make a field, or a getter/setter, ignored by the codec."
-msgstr ""
+msgstr "`org.bson.codecs.configuration.CodecConfigurationException` 例外が発生した場合は、コーデックがオブジェクトを自動的に変換できないことを意味します。このコーデックは、Java Bean 標準に準拠しているため、パブリックフィールドまたはゲッター/セッターを使用する POJO を正常に変換します。 `@BsonIgnore` を使用して、フィールドまたはゲッター/セッターをコーデックで無視することができます。"
 
 #. type: Plain text
 #: upstream/_guides/mongodb-panache.adoc:730
+#, fuzzy
 msgid "If your class doesn't obey these rules (for example by including a method that starts with `get` but is not a setter), you could provide a custom codec for it.  Your custom codec will be automatically discovered and registered inside the codec registry.  See link:mongodb#simplifying-mongodb-client-usage-using-bson-codec[Using BSON codec]."
-msgstr ""
+msgstr "クラスがこれらの規則に従わない場合（例えば、 `get` で始まるがセッターではないメソッドを含む場合）、そのクラスにカスタムコーデックを提供することができます。あなたのカスタム・コーデックは、自動的に検出され、コーデック・レジストリに登録されます。詳しくは、 link:mongodb#simplifying-mongodb-client-usage-using-bson-codec[「BSONコーデックの使用]」をご覧ください。"
 
 #. type: Title ==
 #: upstream/_guides/mongodb-panache.adoc:731
