--- a/l10n/po/ja_JP/_guides/reaugmentation.adoc.po
+++ b/l10n/po/ja_JP/_guides/reaugmentation.adoc.po
@@ -45,8 +45,9 @@ msgstr "ビルドタイムオプション：アプリケーションのビルド
 
 #. type: Plain text
 #: upstream/_guides/reaugmentation.adoc:16
+#, fuzzy
 msgid "Runtime options, that may be adjusted after the application has been built but before it has been launched."
-msgstr ""
+msgstr "ランタイムオプション：アプリケーションが構築された後、起動する前に調整することができます。"
 
 #. type: Plain text
 #: upstream/_guides/reaugmentation.adoc:23
