--- a/l10n/po/ja_JP/_posts/2021-07-07-quarkus-2-0-1-final-released.adoc.po
+++ b/l10n/po/ja_JP/_posts/2021-07-07-quarkus-2-0-1-final-released.adoc.po
@@ -24,7 +24,7 @@ msgstr "—\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-07-07-quarkus-2-0-1-final-released.adoc:8
-#, no-wrap
+#, fuzzy, no-wrap
 msgid ""
 "layout: post\n"
 "title: 'Quarkus 2.0.1.Final released - Maintenance release'\n"
@@ -34,21 +34,31 @@ msgid ""
 "author: gsmet\n"
 "---\n"
 msgstr ""
+"layout: post\n"
+"title: 'Quarkus 2.0.1.Final released - Maintenance release'\n"
+"date: 2021-07-07\n"
+"tags: release\n"
+"synopsis: 2.0.1.Finalは、2.0リリーストレインのメンテナンスリリースです。\n"
+"author: gsmet\n"
+"---\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-07-07-quarkus-2-0-1-final-released.adoc:11
+#, fuzzy
 msgid "We just released Quarkus 2.0.1.Final, our first maintenance release on top of 2.0."
-msgstr ""
+msgstr "Quarkus 2.0.1.Finalをリリースしました。"
 
 #. type: Plain text
 #: upstream/_posts/2021-07-07-quarkus-2-0-1-final-released.adoc:13
+#, fuzzy
 msgid "It is a safe upgrade for anyone already using 2.0.0.Final."
-msgstr ""
+msgstr "すでに2.0.0.Finalをお使いの方も安心してアップグレードできます。"
 
 #. type: Plain text
 #: upstream/_posts/2021-07-07-quarkus-2-0-1-final-released.adoc:15
+#, fuzzy
 msgid "If you are not using 2.0 already, please refer to the https://github.com/quarkusio/quarkus/wiki/Migration-Guide-2.0[2.0 migration guide]."
-msgstr ""
+msgstr "すでに2.0をお使いでない方は、 link:https://github.com/quarkusio/quarkus/wiki/Migration-Guide-2.0[2.0移行ガイド]をご参照ください。"
 
 #. type: Title ==
 #: upstream/_posts/2021-07-07-quarkus-2-0-1-final-released.adoc:16
@@ -58,8 +68,9 @@ msgstr "完全な変更履歴"
 
 #. type: Plain text
 #: upstream/_posts/2021-07-07-quarkus-2-0-1-final-released.adoc:19
+#, fuzzy
 msgid "You can get https://github.com/quarkusio/quarkus/releases/tag/2.0.1.Final[the full changelog of 2.0.1.Final on GitHub]."
-msgstr ""
+msgstr "link:https://github.com/quarkusio/quarkus/releases/tag/2.0.1.Final[2.0.1.Finalの完全な変更履歴はGitHubに]掲載されています。"
 
 #. type: Title ==
 #: upstream/_posts/2021-07-07-quarkus-2-0-1-final-released.adoc:20
