--- a/l10n/po/ja_JP/_guides/spring-web.adoc.po
+++ b/l10n/po/ja_JP/_guides/spring-web.adoc.po
@@ -425,7 +425,7 @@ msgstr "生成された OpenAPI スキーマドキュメントが表示されま
 #: upstream/_guides/spring-web.adoc:228 upstream/_guides/spring-web.adoc:311
 #, no-wrap
 msgid "---\n"
-msgstr "—\n"
+msgstr "---\n"
 
 #. type: delimited block -
 #: upstream/_guides/spring-web.adoc:265
