--- a/l10n/po/ja_JP/_posts/2020-08-19-openapi-for-everyone.adoc.po
+++ b/l10n/po/ja_JP/_posts/2020-08-19-openapi-for-everyone.adoc.po
@@ -28,7 +28,7 @@ msgstr ""
 #: upstream/_posts/2020-08-19-openapi-for-everyone.adoc:625
 #, no-wrap
 msgid "---\n"
-msgstr "—\n"
+msgstr "---\n"
 
 #. type: Plain text
 #: upstream/_posts/2020-08-19-openapi-for-everyone.adoc:8
