--- a/l10n/po/ja_JP/_versions/1.7/guides/spring-web.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/spring-web.adoc.po
@@ -414,7 +414,7 @@ msgstr ""
 #: upstream/_versions/1.7/guides/spring-web.adoc:314
 #, no-wrap
 msgid "---\n"
-msgstr "—\n"
+msgstr "---\n"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/spring-web.adoc:268
