--- a/l10n/po/ja_JP/_guides/topic/continuum.adoc.po
+++ b/l10n/po/ja_JP/_guides/topic/continuum.adoc.po
@@ -20,7 +20,7 @@ msgstr ""
 #: upstream/_guides/topic/continuum.adoc:1
 #, no-wrap
 msgid "---\n"
-msgstr "—\n"
+msgstr "---\n"
 
 #. type: Plain text
 #: upstream/_guides/topic/continuum.adoc:4
