--- a/l10n/po/ja_JP/_guides/vault-auth.adoc.po
+++ b/l10n/po/ja_JP/_guides/vault-auth.adoc.po
@@ -502,7 +502,7 @@ msgstr "最初にファイル `vault-auth-k8s.yml` を作成します。"
 #: upstream/_guides/vault-auth.adoc:250 upstream/_guides/vault-auth.adoc:350
 #, no-wrap
 msgid "---\n"
-msgstr "—\n"
+msgstr "---\n"
 
 #. type: delimited block -
 #: upstream/_guides/vault-auth.adoc:255
