--- a/l10n/po/ja_JP/_posts/2021-07-07-quarkus-2-0-1-final-released.adoc.po
+++ b/l10n/po/ja_JP/_posts/2021-07-07-quarkus-2-0-1-final-released.adoc.po
@@ -20,7 +20,7 @@ msgstr ""
 #: upstream/_posts/2021-07-07-quarkus-2-0-1-final-released.adoc:1
 #, no-wrap
 msgid "---\n"
-msgstr "—\n"
+msgstr "---\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-07-07-quarkus-2-0-1-final-released.adoc:8
