--- a/l10n/po/ja_JP/_versions/1.11/guides/all-config.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/all-config.adoc.po
@@ -20,7 +20,7 @@ msgstr ""
 #: upstream/_versions/1.11/guides/all-config.adoc:1
 #, no-wrap
 msgid "---\n"
-msgstr "—\n"
+msgstr "---\n"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/all-config.adoc:3
