--- a/l10n/po/ja_JP/_versions/1.11/guides/reactive-routes.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/reactive-routes.adoc.po
@@ -1207,7 +1207,7 @@ msgstr ""
 #: upstream/_versions/1.11/guides/reactive-routes.adoc:702
 #, no-wrap
 msgid "---\n"
-msgstr "—\n"
+msgstr "---\n"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/reactive-routes.adoc:645
