--- a/l10n/po/ja_JP/_versions/1.7/guides/reactive-routes.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/reactive-routes.adoc.po
@@ -1109,7 +1109,7 @@ msgstr ""
 #: upstream/_versions/1.7/guides/reactive-routes.adoc:639
 #, no-wrap
 msgid "---\n"
-msgstr "—\n"
+msgstr "---\n"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/reactive-routes.adoc:582
