--- a/l10n/po/ja_JP/_versions/1.7/guides/topic/container-first.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/topic/container-first.adoc.po
@@ -21,7 +21,7 @@ msgstr ""
 #: upstream/_versions/1.7/guides/topic/container-first.adoc:5
 #, no-wrap
 msgid "---\n"
-msgstr "—\n"
+msgstr "---\n"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/topic/container-first.adoc:4
