--- a/l10n/po/ja_JP/_versions/main/guides/reactive-routes.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/reactive-routes.adoc.po
@@ -1265,7 +1265,7 @@ msgstr ""
 #: upstream/_versions/main/guides/reactive-routes.adoc:748
 #, no-wrap
 msgid "---\n"
-msgstr "—\n"
+msgstr "---\n"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/reactive-routes.adoc:692
