--- a/l10n/po/ja_JP/_versions/main/guides/spring-web.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/spring-web.adoc.po
@@ -414,7 +414,7 @@ msgstr ""
 #: upstream/_versions/main/guides/spring-web.adoc:311
 #, no-wrap
 msgid "---\n"
-msgstr "—\n"
+msgstr "---\n"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/spring-web.adoc:265
