--- a/l10n/po/ja_JP/_versions/main/guides/vault-auth.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/vault-auth.adoc.po
@@ -461,7 +461,7 @@ msgstr ""
 #: upstream/_versions/main/guides/vault-auth.adoc:350
 #, no-wrap
 msgid "---\n"
-msgstr "—\n"
+msgstr "---\n"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/vault-auth.adoc:255
