--- a/l10n/po/ja_JP/_posts/2021-07-07-quarkus-2-0-1-final-released.adoc.po
+++ b/l10n/po/ja_JP/_posts/2021-07-07-quarkus-2-0-1-final-released.adoc.po
@@ -3,18 +3,18 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2021-07-07 08:04+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2021-07-11 22:50+0900\n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"X-Generator: Poedit 2.4.2\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-07-07-quarkus-2-0-1-final-released.adoc:1
@@ -24,7 +24,7 @@ msgstr "---\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-07-07-quarkus-2-0-1-final-released.adoc:8
-#, fuzzy, no-wrap
+#, no-wrap
 msgid ""
 "layout: post\n"
 "title: 'Quarkus 2.0.1.Final released - Maintenance release'\n"
@@ -35,7 +35,7 @@ msgid ""
 "---\n"
 msgstr ""
 "layout: post\n"
-"title: 'Quarkus 2.0.1.Final released - Maintenance release'\n"
+"title: 'Quarkus 2.0.1.Final リリース - メンテナンスリリース'\n"
 "date: 2021-07-07\n"
 "tags: release\n"
 "synopsis: 2.0.1.Finalは、2.0リリーストレインのメンテナンスリリースです。\n"
@@ -44,21 +44,18 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2021-07-07-quarkus-2-0-1-final-released.adoc:11
-#, fuzzy
 msgid "We just released Quarkus 2.0.1.Final, our first maintenance release on top of 2.0."
 msgstr "Quarkus 2.0.1.Finalをリリースしました。"
 
 #. type: Plain text
 #: upstream/_posts/2021-07-07-quarkus-2-0-1-final-released.adoc:13
-#, fuzzy
 msgid "It is a safe upgrade for anyone already using 2.0.0.Final."
 msgstr "すでに2.0.0.Finalをお使いの方も安心してアップグレードできます。"
 
 #. type: Plain text
 #: upstream/_posts/2021-07-07-quarkus-2-0-1-final-released.adoc:15
-#, fuzzy
 msgid "If you are not using 2.0 already, please refer to the https://github.com/quarkusio/quarkus/wiki/Migration-Guide-2.0[2.0 migration guide]."
-msgstr "すでに2.0をお使いでない方は、 link:https://github.com/quarkusio/quarkus/wiki/Migration-Guide-2.0[2.0移行ガイド]をご参照ください。"
+msgstr "まだ2.0をお使いでない方は、 link:https://github.com/quarkusio/quarkus/wiki/Migration-Guide-2.0[2.0移行ガイド]をご参照ください。"
 
 #. type: Title ==
 #: upstream/_posts/2021-07-07-quarkus-2-0-1-final-released.adoc:16
@@ -68,9 +65,8 @@ msgstr "完全な変更履歴"
 
 #. type: Plain text
 #: upstream/_posts/2021-07-07-quarkus-2-0-1-final-released.adoc:19
-#, fuzzy
 msgid "You can get https://github.com/quarkusio/quarkus/releases/tag/2.0.1.Final[the full changelog of 2.0.1.Final on GitHub]."
-msgstr "link:https://github.com/quarkusio/quarkus/releases/tag/2.0.1.Final[2.0.1.Finalの完全な変更履歴はGitHubに]掲載されています。"
+msgstr "link:https://github.com/quarkusio/quarkus/releases/tag/2.0.1.Final[2.0.1.Finalの完全な変更履歴はGitHub] に掲載されています。"
 
 #. type: Title ==
 #: upstream/_posts/2021-07-07-quarkus-2-0-1-final-released.adoc:20
