Update .po files

--- a/l10n/po/ja_JP/_versions/main/guides/tests-with-coverage.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/tests-with-coverage.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-06-09 02:32+0000\n"
+"POT-Creation-Date: 2021-07-13 02:20+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -302,7 +302,7 @@ msgid ""
 "        given()\n"
 "          .when().get(\"/hello\")\n"
 "          .then()\n"
-"             .statusCode(200)  \n"
+"             .statusCode(200)\n"
 "             .body(is(\"hello\"));\n"
 "    }\n"
 msgstr ""
@@ -543,10 +543,69 @@ msgstr ""
 #. type: Title ==
 #: upstream/_versions/main/guides/tests-with-coverage.adoc:320
 #, no-wrap
+msgid "Setting coverage thresholds for the Maven build"
+msgstr ""
+
+#. type: Plain text
+#: upstream/_versions/main/guides/tests-with-coverage.adoc:323
+msgid "You can set thresholds for code coverage using the Jacoco Maven plugin. Note the element `<dataFile>${project.build.directory}/jacoco-quarkus.exec</dataFile>`. You must set it matching your choice for `quarkus.jacoco.data-file`."
+msgstr ""
+
+#. type: delimited block -
+#: upstream/_versions/main/guides/tests-with-coverage.adoc:368
+#, no-wrap
+msgid ""
+"<build>\n"
+"    ...\n"
+"    <plugins>\n"
+"        ...\n"
+"        <plugin>\n"
+"            <groupId>org.jacoco</groupId>\n"
+"            <artifactId>jacoco-maven-plugin</artifactId>\n"
+"            <version>${jacoco.version}</version>\n"
+"            <executions>\n"
+"                <execution>\n"
+"                    <id>jacoco-check</id>\n"
+"                    <goals>\n"
+"                        <goal>check</goal>\n"
+"                    </goals>\n"
+"                    <phase>test</phase>\n"
+"                    <configuration>\n"
+"                        <dataFile>${project.build.directory}/jacoco-quarkus.exec</dataFile>\n"
+"                        <rules>\n"
+"                            <rule>\n"
+"                                <element>BUNDLE</element>\n"
+"                                <limits>\n"
+"                                    <limit>\n"
+"                                        <counter>LINE</counter>\n"
+"                                        <value>COVEREDRATIO</value>\n"
+"                                        <minimum>0.8</minimum>\n"
+"                                    </limit>\n"
+"                                    <limit>\n"
+"                                        <counter>BRANCH</counter>\n"
+"                                        <value>COVEREDRATIO</value>\n"
+"                                        <minimum>0.72</minimum>\n"
+"                                    </limit>\n"
+"                                </limits>\n"
+"                            </rule>\n"
+"                        </rules>\n"
+"                    </configuration>\n"
+"                </execution>\n"
+"            </executions>\n"
+"        </plugin>\n"
+"        ...\n"
+"    </plugins>\n"
+"    ...\n"
+"</build>\n"
+msgstr ""
+
+#. type: Title ==
+#: upstream/_versions/main/guides/tests-with-coverage.adoc:370
+#, no-wrap
 msgid "Conclusion"
 msgstr "まとめ"
 
 #. type: Plain text
-#: upstream/_versions/main/guides/tests-with-coverage.adoc:323
+#: upstream/_versions/main/guides/tests-with-coverage.adoc:373
 msgid "You now have all the information you need to study the coverage of your tests! But remember, some code that is not covered is certainly not well tested. But some code that is covered is not necessarily *well* tested. Make sure to write good tests!"
 msgstr "これで、テストのカバレッジを研究するために必要なすべての情報を手に入れることができました!しかし、カバーされていないコードは、確かに十分にテストされていないものがありますが、カバーされているコードの中には、必ずしも *十分に* テストされていないものもあることを覚えておいてください。良いテストを書くようにしましょう!"
