--- a/l10n/po/ja_JP/_versions/main/guides/dev-mode-differences.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/dev-mode-differences.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-05-07 17:34+0000\n"
+"POT-Creation-Date: 2021-07-13 02:20+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -194,7 +194,9 @@ msgstr "Mock mailer"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/dev-mode-differences.adoc:75
-msgid "The `quarkus-mailer` extension will enable an in-memory mock mail server when Quarkus is running in dev-mode. See link:mailer.adoc#testing[this] for more details."
+#, fuzzy
+#| msgid "The `quarkus-mailer` extension will enable an in-memory mock mail server when Quarkus is running in dev-mode. See link:mailer.adoc#testing[this] for more details."
+msgid "The `quarkus-mailer` extension will enable an in-memory mock mail server when Quarkus is running in dev-mode. See link:mailer-reference.adoc#testing[this] for more details."
 msgstr "`quarkus-mailer` エクステンションは、Quarkusがdev-modeで動作しているときに、インメモリのモックメールサーバを有効にします。詳しくは link:mailer.adoc#testing[こちら]をご覧ください。"
 
 #. type: Title ===
