Update .po files

--- a/l10n/po/ja_JP/_guides/security-jwt.adoc.po
+++ b/l10n/po/ja_JP/_guides/security-jwt.adoc.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2021-06-30 15:12+0000\n"
+"POT-Creation-Date: 2021-07-13 17:14+0000\n"
 "PO-Revision-Date: 2021-05-12 14:04+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -816,7 +816,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_guides/security-jwt.adoc:420
 #, fuzzy
-msgid "We will use a `smallrye.jwt.sign.key-location` property to point to this private signing key."
+msgid "We will use a `smallrye.jwt.sign.key.location` property to point to this private signing key."
 msgstr "この秘密署名鍵を指すために `smallrye.jwt.sign.key-location` プロパティーを使用します。"
 
 #. type: Block title
@@ -890,7 +890,7 @@ msgstr "サンプルJWT生成出力"
 #. type: delimited block -
 #: upstream/_guides/security-jwt.adoc:452
 #, no-wrap
-msgid "$ mvn exec:java -Dexec.mainClass=org.acme.security.jwt.GenerateToken -Dexec.classpathScope=test -Dsmallrye.jwt.sign.key-location=privateKey.pem\n"
+msgid "$ mvn exec:java -Dexec.mainClass=org.acme.security.jwt.GenerateToken -Dexec.classpathScope=test -Dsmallrye.jwt.sign.key.location=privateKey.pem\n"
 msgstr ""
 
 #. type: delimited block -
@@ -1847,7 +1847,7 @@ msgstr "トークン復号化"
 #. type: Plain text
 #: upstream/_guides/security-jwt.adoc:759
 #, fuzzy
-msgid "If your application needs to accept the tokens with the encrypted claims or with the encrypted inner signed claims then all you have to do is to set `smallrye.jwt.decrypt.key-location` pointing to the decryption key."
+msgid "If your application needs to accept the tokens with the encrypted claims or with the encrypted inner signed claims then all you have to do is to set `smallrye.jwt.decrypt.key.location` pointing to the decryption key."
 msgstr "アプリケーションが暗号化されたクレームや暗号化された内部署名付きクレームのトークンを受け入れる必要がある場合は、 `smallrye.jwt.decrypt.key-location` を復号化キーを指すように設定するだけです。"
 
 #. type: Plain text
@@ -2377,7 +2377,7 @@ msgstr "クレームを暗号化するには、すぐに暗号化するか、 `J
 #: upstream/_guides/security-jwt.adoc:1047
 #, no-wrap
 msgid ""
-"// Encrypt the claims using the public key loaded from the location set with a 'smallrye.jwt.encrypt.key-location' property.\n"
+"// Encrypt the claims using the public key loaded from the location set with a 'smallrye.jwt.encrypt.key.location' property.\n"
 "String jwt1 = Jwt.claims(\"/tokenClaims.json\").jwe().encrypt();\n"
 msgstr ""
 
@@ -2424,7 +2424,7 @@ msgstr "高速JWTジェネレーション"
 #. type: Plain text
 #: upstream/_guides/security-jwt.adoc:1069
 #, fuzzy
-msgid "If `smallrye.jwt.sign.key-location` or/and `smallrye.jwt.encrypt.key.location` properties are set then one can secure the existing claims (resources, maps, JsonObjects) with a single call:"
+msgid "If `smallrye.jwt.sign.key.location` or/and `smallrye.jwt.encrypt.key.location` properties are set then one can secure the existing claims (resources, maps, JsonObjects) with a single call:"
 msgstr "`smallrye.jwt.sign.key-location` や `smallrye.jwt.encrypt.key-location` プロパティーが設定されていれば、1回の呼び出しで既存のクレーム(リソース、マップ、JsonObjects)を確保することができます。"
 
 #. type: delimited block -
