--- a/l10n/po/ja_JP/_guides/security-openid-connect-multitenancy.adoc.po
+++ b/l10n/po/ja_JP/_guides/security-openid-connect-multitenancy.adoc.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2021-06-30 15:11+0000\n"
+"POT-Creation-Date: 2021-07-13 17:14+0000\n"
 "PO-Revision-Date: 2021-04-13 23:32+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -695,8 +695,8 @@ msgstr ""
 #: upstream/_guides/security-openid-connect-multitenancy.adoc:325
 #, no-wrap
 msgid ""
+"import io.quarkus.oidc.OidcTenantConfig;\n"
 "import io.quarkus.oidc.TenantConfigResolver;\n"
-"import io.quarkus.oidc.runtime.OidcTenantConfig;\n"
 "import io.vertx.ext.web.RoutingContext;\n"
 msgstr ""
 
