--- a/l10n/stats/translation.csv
+++ b/l10n/stats/translation.csv
@@ -1,4 +1,5 @@
 Filename, Fuzzy Messages, Total Messages, Fuzzy Words, Total Words, Achievement
+l10n/po/ja_JP/_posts/2021-07-13-quarkus-2-0-2-final-released.adoc.po, 0, 14, 0, 155 ,100%
 l10n/po/ja_JP/_posts/2021-07-07-quarkus-2-0-1-final-released.adoc.po, 0, 14, 0, 148 ,100%
 l10n/po/ja_JP/_posts/2021-06-30-quarkus-2-0-0-final-released.adoc.po, 0, 61, 0, 1153 ,100%
 l10n/po/ja_JP/_posts/2021-06-22-calling-all-roadies.adoc.po, 0, 34, 0, 377 ,100%
