Update .po files

--- a/l10n/po/ja_JP/_versions/main/guides/mailer-reference.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/mailer-reference.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-07-13 02:20+0000\n"
+"POT-Creation-Date: 2021-07-14 02:17+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -595,7 +595,45 @@ msgid "For more information about the Mailer configuration please refer to the <
 msgstr ""
 
 #. type: Title ==
-#: upstream/_versions/main/guides/mailer-reference.adoc:346
+#: upstream/_versions/main/guides/mailer-reference.adoc:344
+#, no-wrap
+msgid "Configuring a trust store"
+msgstr ""
+
+#. type: Plain text
+#: upstream/_versions/main/guides/mailer-reference.adoc:347
+msgid "If your SMTP requires a trust store, you can configure the trust store as follows:"
+msgstr ""
+
+#. type: delimited block -
+#: upstream/_versions/main/guides/mailer-reference.adoc:356
+#, no-wrap
+msgid ""
+"quarkus.mailer.host=...\n"
+"quarkus.mailer.port=...\n"
+"quarkus.mailer.ssl=true\n"
+"quarkus.mailer.trust-store.paths=truststore.jks # the path to your trust store\n"
+"quarkus.mailer.trust-store.password=secret # the trust store password if any\n"
+"quarkus.mailer.trust-store.type=JKS # the type of trust store if it can't be deduced from the file extension\n"
+msgstr ""
+
+#. type: Plain text
+#: upstream/_versions/main/guides/mailer-reference.adoc:361
+msgid "Quarkus mailer supports JKS, PCKS#12 and PEM trust stores.  For PEM, you can configure multiple files.  For JKS and PCKS#12, you can configure the password if any."
+msgstr ""
+
+#. type: Plain text
+#: upstream/_versions/main/guides/mailer-reference.adoc:364
+msgid "`quarkus.mailer.trust-store.type` is optional and allows configuring the type of trust store (among `JKS`, `PEM` and `PCKS`).  When not set, Quarkus tries to deduce the type from the file name."
+msgstr ""
+
+#. type: Plain text
+#: upstream/_versions/main/guides/mailer-reference.adoc:366
+msgid "You can also configure `quarkus.mailer.trust-all=true` to bypass the verification."
+msgstr ""
+
+#. type: Title ==
+#: upstream/_versions/main/guides/mailer-reference.adoc:368
 #, no-wrap
 msgid "Mailer Configuration Reference"
 msgstr ""
