--- a/l10n/po/ja_JP/_versions/main/guides/funqy-knative-events.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/funqy-knative-events.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-05-07 17:34+0000\n"
+"POT-Creation-Date: 2021-07-14 02:17+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -224,7 +224,9 @@ msgstr "この場合、この構成では、受信するCloud Eventのタイプ 
 
 #. type: Plain text
 #: upstream/_versions/main/guides/funqy-knative-events.adoc:121
-msgid "`quarkus.funqy.knative-events.mapping.{function name}.trigger` sets the Cloud Event type that triggers a specific function"
+#, fuzzy
+#| msgid "`quarkus.funqy.knative-events.mapping.{function name}.trigger` sets the Cloud Event type that triggers a specific function"
+msgid "`quarkus.funqy.knative-events.mapping.{function name}.trigger` sets the Cloud Event type that triggers a specific function. It is possible to use the special value `*` as a catch-all value. The function will in this case be used for all event types."
 msgstr "`quarkus.funqy.knative-events.mapping.{function name}.trigger` は、特定の機能をトリガーする Cloud Event タイプを設定します。"
 
 #. type: Plain text
